--- a/DatingSite/requirements.txt
+++ b/DatingSite/requirements.txt
@@ -13,9 +13,12 @@ defusedxml==0.7.1
 Django==4.1.4
 django-allauth==0.51.0
 django-friendship==1.9.6
+django-tables2==2.4.1
+fuzzywuzzy==0.18.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+Levenshtein==0.20.8
 oauthlib==3.2.2
 Pillow==9.3.0
 pyasn1==0.4.8
@@ -23,7 +26,9 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.6.0
 pyOpenSSL==22.1.0
+python-Levenshtein==0.20.8
 python3-openid==3.2.0
+rapidfuzz==2.13.7
 requests==2.28.1
 requests-oauthlib==1.3.1
 service-identity==21.1.0
